--- a/Home.html
+++ b/Home.html
@@ -12,10 +12,12 @@
     <script src="Script.js"></script>
 </head>
 <body>
-    <div class="header">
-        <div class="theme">
-            <i class="moon fa-solid fa-moon" id="moon" onclick="ToggleThemeD()"></i>
-            <i class="sun fa-solid fa-sun" id="sun" onclick="ToggleThemeL()"></i>
+    <div class="grid">
+        <div class="header">
+            <div class="theme">
+                <i class="fa-solid fa-moon" id="moon" onclick="ToggleThemeD()"></i>
+                <i class="fa-solid fa-sun" id="sun" onclick="ToggleThemeL()"></i>
+            </div>
         </div>
     </div>
 </body>
