--- a/Home.html
+++ b/Home.html
@@ -4,21 +4,48 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
-    <link rel="stylesheet" href="Style.css">
     <link rel="stylesheet" href="node_modules/bulma/css/bulma.min.css">
     <link rel="stylesheet" href="node_modules/bulma-extensions/bulma-checkradio/dist/css/bulma-checkradio.min.css">
     <script src="node_modules/bulma-toast/dist/bulma-toast.min.js"></script>
     <script src="https://kit.fontawesome.com/5fa0058b85.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="Style.css">
     <script src="Script.js"></script>
 </head>
 <body>
     <div class="grid">
-        <div class="header">
+        <header>
             <div class="theme">
-                <i class="fa-solid fa-moon" id="moon" onclick="ToggleThemeD()"></i>
-                <i class="fa-solid fa-sun" id="sun" onclick="ToggleThemeL()"></i>
+                <i class="fa-solid fa-moon fa-2xl" id="moon" onclick="ToggleThemeD()"></i>
+                <i class="fa-solid fa-sun fa-2xl" id="sun" onclick="ToggleThemeL()"></i>
             </div>
+
+            <h1 class="header">
+
+            </h1>
+
+            <div class="settings">
+                <i class="fa-solid fa-gear fa-2xl"></i>
+            </div>
+
+
+        </header>
+
+        <div class="navbar">
+
         </div>
+
+        <div class="content">
+            <div class="content1"></div>
+            <div class="content2"></div>
+            <div class="content3"></div>
+        </div>
+
+        <div class="readme">
+            <div class="readme1"></div>
+            <div class="readme2"></div>
+            <div class="readme3"></div>
+        </div>
+
     </div>
 </body>
 </html>
