--- a/Home.html
+++ b/Home.html
@@ -30,9 +30,20 @@
 
         </header>
 
-        <div class="navbar">
+        <nav class="navbar">
+            <div id="navbar">
+                <a href="Home.html" class="button whereYouAre">Home</a>
+                <button class="button" onclick="OpenNav()">More<i class="fa-solid fa-caret-down fa-xl"></i></button>
+            </div>
 
-        </div>
+            <div id="dropdown">
+                <div>
+                    <div><a class="title is-6" href="Home.html">Home</a></div>
+                    <div><a class="title is-6" href="Game.html">Game</a></div>
+                    <div><a class="title is-6" href="Form.html">Form</a></div>
+                </div>
+            </div>
+        </nav>
 
         <div class="content">
             <div class="content1"></div>
