--- a/Home.html
+++ b/Home.html
@@ -47,7 +47,7 @@
         </nav>
 
         <div class="content" id="content">
-            <div class="news">news</div>
+            <div class="news title">news</div>
             <div class="content1">
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consectetur quis consequatur unde aliquam laudantium veritatis expedita, soluta tempore sed fuga praesentium id optio obcaecati provident ratione? Et nobis voluptates necessitatibus! Ducimus illo est deleniti excepturi laudantium quidem molestias aperiam adipisci debitis nesciunt commodi quo quisquam, quas corporis qui tempore vel earum nihil ipsam repudiandae possimus optio doloremque ut incidunt. Aliquid aperiam quo atque nemo, velit odio ut voluptatem enim ea nisi animi impedit natus debitis voluptatibus repellendus ad vel perferendis excepturi veritatis quis. Beatae esse laborum excepturi dolore odit magni vel dolorem omnis eaque incidunt, recusandae ipsa est accusamus. Nulla.
                 <div class="readmore" onclick="Readmore(0)">Readmore<i class="fa-solid fa-chevron-down"></i></div>
