--- a/Game.html
+++ b/Game.html
@@ -46,10 +46,10 @@
             </div>
         </nav>
 
-        <div class="content">
-            <div class="content1"></div>
-            <div class="content2"></div>
-            <div class="content3"></div>
+        <div class="content" onclick="test()">
+            <canvas id="Game" width="100%" height="100%">
+                
+            </canvas>
         </div>
 
         <div class="readme">
