--- a/Game.html
+++ b/Game.html
@@ -46,13 +46,13 @@
             </div>
         </nav>
 
-        <div class="content" onclick="test()">
+        <div class="content" onclick="Food()">
             <canvas id="Game" width="200px" height="200px">
 
             </canvas>
             <div id="winLose">
                 <p id="top" class="title">Win or Lose</p>
-                <p id="score">Your score: </p>
+                <p id="score">0</p>
                 <button id="restart" onclick="Restart()" class="button">Restart</button>
             </div>
         </div>
