--- a/Game.html
+++ b/Game.html
@@ -46,7 +46,7 @@
             </div>
         </nav>
 
-        <div class="content" onclick="Food()">
+        <div class="content">
             <canvas id="Game" width="200px" height="200px">
 
             </canvas>
