--- a/Game.html
+++ b/Game.html
@@ -54,16 +54,24 @@
             <div id="winLose">
                 <p id="top" class="title">Win or Lose</p>
                 <p id="score">0</p>
-                <button id="restart" onclick="Restart()" class="button">Restart</button>
+                <button id="restart" onclick="Restart()" class="button">Start</button>
             </div>
         </div>
 
         <div class="readme">
-            <div class="readme1"></div>
+            <div class="score2" id="score2">0</div>
             <div class="readme2"></div>
-            <div class="readme3"></div>
+            <div class="HowToPlay" id="HowToPlay" style="display: flex; flex-direction: column; align-items: end;">
+                <div id="you" style="display: flex; align-items: center;">
+                    you: 
+                    <div class="you" style="width: 20px; height: 20px; background: #ff1030;"></div>
+                </div>
+                <div id="food" style="display: flex; align-items: center;">
+                    food:
+                    <div class="food" style="width: 20px; height: 20px; background: #fea;"></div>
+                </div>
+            </div>
         </div>
-
     </div>
 </body>
 </html>
