--- a/Form.html
+++ b/Form.html
@@ -51,14 +51,14 @@
                 <div class="field">
                     <label class="label">Name</label>
                     <div class="control">
-                        <input class="input" type="text" placeholder="Name">
+                        <input name="name" class="input" type="text" placeholder="Name">
                     </div>
                 </div>
                 
                 <div class="field">
                     <label class="label">Email</label>
                     <div class="control has-icons-left has-icons-right">
-                        <input class="input" type="email" placeholder="Email">
+                        <input name="email" class="input" type="email" placeholder="Email">
                         <span class="icon is-small is-left">
                             <i class="fas fa-envelope"></i>
                         </span>
@@ -68,7 +68,7 @@
                 <div class="field">
                     <label class="label">Message</label>
                     <div class="control">
-                        <textarea class="textarea" placeholder="Message"></textarea>
+                        <textarea name="message" class="textarea" placeholder="Message"></textarea>
                     </div>
                 </div>
                 
