--- a/Game.html
+++ b/Game.html
@@ -60,7 +60,12 @@
 
         <div class="readme">
             <div class="score2" id="score2">0</div>
-            <div class="readme2"></div>
+            <div class="controls" id="controls">
+                <div class="up button" onclick="Up()">up</div>
+                <div class="down button" onclick="Down()">down</div>
+                <div class="left button" onclick="Left()">left</div>
+                <div class="right button" onclick="Right()">right</div>
+            </div>
             <div class="HowToPlay" id="HowToPlay" style="display: flex; flex-direction: column; align-items: end;">
                 <div id="you" style="display: flex; align-items: center;">
                     you: 
